[package]
name = "access-mask"
authors = ["CodeOverFlow"]
version = "0.1.0"
edition = "2024"
description = "access-mask is a command line tool that interprets handle access mask values (both generic and specific)."
keywords = ["access", "mask", "access-mask", "windows"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"

[target.'cfg(windows)'.dependencies]
clap = { version = "=4.5.32", features = ["derive"] }
thiserror = "=2.0.12"
windows = { version = "=0.61.1", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Wdk_System_SystemServices",
    "Win32_System_StationsAndDesktops",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_Networking_ActiveDirectory",
] }
